src-tauri/tests/snapshots/pipeline_streams__stream_replay@cursor__interleaved.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/cursor/interleaved.jsonl
---
line_count: 10
checkpoint_count: 5
checkpoints:
  - line_index: 3
    event_type: cursor/tool_call_start
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
  - line_index: 4
    event_type: cursor/tool_call_end
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
  - line_index: 6
    event_type: cursor/tool_call_start
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
      - text
      - tool-call
  - line_index: 7
    event_type: cursor/tool_call_end
    roles:
      - assistant
    last_part_types:
      - text
      - tool-call
      - text
      - tool-call
  - line_index: 9
    event_type: cursor/status
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 6
persisted_turns:
  turn_count: 7
  total_blocks: 7
  turns:
    - role: assistant
      block_types:
        - text
    - role: assistant
      block_types:
        - tool_use
    - role: user
      block_types:
        - tool_result
    - role: assistant
      block_types:
        - text
    - role: assistant
      block_types:
        - tool_use
    - role: user
      block_types:
        - tool_result
    - role: assistant
      block_types:
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - tool-call
        - text
        - tool-call
        - text
