src-tauri/tests/snapshots/pipeline_streams__stream_replay@cursor__resume.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/cursor/resume.jsonl
---
line_count: 12
checkpoint_count: 1
checkpoints:
  - line_index: 11
    event_type: cursor/status
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 3
persisted_turns:
  turn_count: 2
  total_blocks: 2
  turns:
    - role: assistant
      block_types:
        - thinking
    - role: assistant
      block_types:
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - text
